2022-01-09 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/support/valdiag/tests/bug-2798.c:
      Exclude test for mos6502 port (no support for __sfr).
      
2022-01-09 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Fix several compiler warnings.
      
2022-01-09 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/gen.c:
      Fix several compiler warnings.
      
2022-01-09 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/mos6502/ralloc.c:
      Remove oldralloc dead code.

2022-01-09 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* device/lib/pic16/Makefile.in,
	  device/lib/pic16/aclocal.m4,
	  device/lib/pic16/configure,
	  device/lib/pic16/configure.ac,
	  device/lib/pic16/debug/Makefile.in,
	  device/lib/pic16/libc/Makefile.in,
	  device/lib/pic16/libio/Makefile.in,
	  device/lib/pic16/libm/Makefile.in,
	  device/lib/pic16/libsdcc/Makefile.in,
	  device/lib/pic16/missing,
	  device/lib/pic16/startup/Makefile.in:
	  Update pic16 library build infrastructure (fixes a configuration time warning).
	* support/regression/ports/mos6502/spec.mk:
	  Fix makebin path.

2022-01-08 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/src/SDCCsymt.c,
      sdcc/src/SDCCpeeph.c,
      sdcc/src/SDCCmain.c,
      sdcc/src/SDCCicode.c,
      sdcc/src/SDCCglue.c,
      sdcc/src/port.h,
      sdcc/src/clean.mk,
      sdcc/Makefile.in,
      sdcc/device/lib/Makefile.in,
      sdcc/device/include/Makefile.in,
      sdcc/configure.ac,
      sdcc/configure:
      Enable the mos6502 port.

2022-01-08 Gabriele Gorla <gorlik@yahoo.com>

    * sdcc/support/regression/tests/z88dk_callee.c,
      sdcc/support/regression/tests/z88dk.c,
      sdcc/support/regression/tests/gcc-torture-execute-strlen-4.c,
      sdcc/support/regression/tests/gcc-torture-execute-func-ptr-1.c,
      sdcc/support/regression/tests/gcc-torture-execute-9911112-1.c,
      sdcc/support/regression/tests/gcc-torture-execute-930702-1.c,