@@ -1,5 +1,11 @@
 2022-01-09 Gabriele Gorla <gorlik@yahoo.com>
 
+    * sdcc/src/mos6502/ralloc.c,
+      sdcc/src/hc08/ralloc.c:
+      Remove more dead code.
+      
+2022-01-09 Gabriele Gorla <gorlik@yahoo.com>
+
     * sdcc/support/valdiag/tests/bug-2798.c:
       Exclude test for mos6502 port (no support for __sfr).
       
